# RomKit

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml
RomKit/: __init__.py
RomKit/orgposter/: config.py  device_info_reader.py  id_tracker.py  main.py
RomKit/utils/: __init__.py  logger.py  message.py  telegram.py  version.py
